# Dynamixel

./: .gitignore  CMakeLists.txt  README.md
BerryArm/: CMakeLists.txt  arm_vis.sh
BerryArm/dynamixel_sdk_c/example/dxl_monitor/linux64/: dxl_monitor
BerryArm/include/: XM430-W210_Control_Table.h  XM_bulk_chain.h  XM_class.h
BerryArm/python/: 3_Test_reel_v2_avecCamera.py  coord2angle.py
BerryArm/src/arm/: arm_gotopos.cpp  arm_init.cpp
BerryArm/src/arm/PID_tuning/: arm_accuracy_test.cpp  arm_accuracy_test_init.cpp
BerryArm/src/arm/demo/gripper/: arm_demo_load.cpp
BerryArm/src/arm/demo/pen/: learn2write.cpp
BerryArm/src/arm/pi/: arm_pump_control.cpp
BerryArm/src/classes/: XM_class.cpp
BerryArm/src/utilities/: mod_param.cpp
include/: XM430-W210_Control_Table.h  XM_bulk_chain.h  XM_class.h  arm_settings.h
init/: init_port.sh
python/: coord2angle.py
src/: Arm.cpp  Chain_monitor.cpp  Chain_monitor_example.cpp  Chain_reboot.cpp  Chain_toroff.cpp  Monitor_XM.cpp  XM430-W210_Control_Table.cpp  XM_bulk_chain.cpp  XM_bulk_chain_change_baudrate.cpp  XM_bulk_chain_monitor.cpp  XM_bulk_chain_test.cpp  XM_class.cpp  XM_class_test.cpp  XM_model_identification.cpp  arm_accuracy_test.cpp  arm_accuracy_test_init.cpp  arm_demo.cpp  arm_demo_load.cpp  arm_demo_save.cpp  arm_gotopos.cpp  mod_param.cpp
src/arm/: arm_gotopos.cpp
src/arm/PID_tuning/: arm_accuracy_test.cpp  arm_accuracy_test_init.cpp
src/arm/demo/gripper/: arm_demo_save.cpp
src/arm/demo/pen/: learn2write.cpp
src/arm/pi/: arm_pump_control.cpp
src/utilities/: Chain_reboot.cpp  Chain_toroff.cpp  XM_bulk_chain_change_baudrate.cpp  XM_bulk_chain_monitor.cpp  XM_model_identification.cpp
